# svg_generator

./: README.md  main.py  pyproject.toml  svg.py
