[tool.poetry]
name = "svg_generator"
version = "0.1.0"
description = "Sample svg generator"
authors = ["Anastasia Chumakova <pospelowa.anast@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
